--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hono": "^4.8.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
