--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "compilerOptions": {
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+  "name": "cf-vue",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
   "dependencies": {
-    "hono": "^4.8.3"
+    "hono": "^4.7.11",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.5.0",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "vite": "^6.2.4",
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "wrangler": "^4.19.1"
   }
 }
