--- a/app-obat/package.json
+++ b/app-obat/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-project",
-  "version": "0.0.0",
+  "name": "app-obat",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "hono": "^4.8.3",
+    "vue": "^3.5.17",
+    "wrangler": "^4.22.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
-    "vite": "^7.0.0",
-    "vite-plugin-vue-devtools": "^7.7.7"
+    "vite": "^7.0.0"
   }
 }
