--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,16 @@
-name = "toko-buah"
-compatibility_date = "2024-06-01"
-
-[[d1_databases]]
-binding = "DB"
-database_name = "buah"
-database_id = "48c2e865-887d-41a3-8a2f-469c808c1c5"
+{
+  "name": "cf-vue",
+  "compatibility_date": "2024-12-30",
+  "assets": {
+    "binding": "ASSETS",
+    "not_found_handling": "single-page-application"
+  },
+  "main": "./api/index.js",
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "cf-vue",
+      "database_id": "48c2e865-887d-41a3-8a2f-469c808c1c5"
+    }
+  ]
+}
